Adds Markdown linter.

--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "react-dom": "^15.6.1",
     "react-helmet": "^5.1.3",
     "react-share": "^1.15.0",
-    "react-twitter-widgets": "^1.4.0"
+    "react-twitter-widgets": "^1.4.0",
+    "remark-cli": "^4.0.0",
+    "remark-preset-lint-recommended": "^3.0.0"
   },
   "devDependencies": {
     "eslint": "^3.19.0",
@@ -55,6 +57,12 @@
     "build-pl": "gatsby build --prefix-paths",
     "clean": "rm -rf public",
     "lint": "eslint --ext .js,.jsx --ignore-pattern public,static .",
+    "remark-lint": "remark content/posts/",
     "gh-deploy": "npm run clean && npm run build-pl && gh-pages -d public"
+  },
+  "remarkConfig": {
+    "plugins": [
+      "remark-preset-lint-recommended"
+    ]
   }
 }
