--- a/package.json
+++ b/package.json
@@ -31,20 +31,22 @@
     "react-dom": "^15.6.1",
     "react-helmet": "^5.1.3",
     "react-share": "^1.15.0",
-    "react-twitter-widgets": "^1.4.0",
-    "remark-cli": "^4.0.0",
-    "remark-preset-lint-recommended": "^3.0.0"
+    "react-twitter-widgets": "^1.4.0"
   },
   "devDependencies": {
+    "cli-glob": "^0.1.0",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^15.0.2",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^5.1.1",
     "eslint-plugin-react": "^7.1.0",
     "gh-pages": "^1.0.0",
+    "remark-cli": "^4.0.0",
+    "remark-preset-lint-recommended": "^3.0.0",
     "stylefmt": "^6.0.0",
     "stylelint": "^8.0.0",
-    "stylelint-config-standard": "^17.0.0"
+    "stylelint-config-standard": "^17.0.0",
+    "write-good": "^0.11.3"
   },
   "keywords": [
     "gatsby"
@@ -58,6 +60,7 @@
     "clean": "rm -rf public",
     "lint": "eslint --ext .js,.jsx --ignore-pattern public,static .",
     "remark-lint": "remark content/posts/",
+    "write-good": "write-good $(glob 'content/posts/**/*.md')",
     "gh-deploy": "npm run clean && npm run build-pl && gh-pages -d public"
   },
   "remarkConfig": {
