--- a/package.json
+++ b/package.json
@@ -37,10 +37,12 @@
     "cli-glob": "^0.1.0",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^15.0.2",
+    "eslint-config-prettier": "^2.3.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^5.1.1",
     "eslint-plugin-react": "^7.1.0",
     "gh-pages": "^1.0.0",
+    "prettier": "^1.5.3",
     "remark-cli": "^4.0.0",
     "remark-preset-lint-recommended": "^3.0.0",
     "stylefmt": "^6.0.0",
@@ -61,6 +63,7 @@
     "lint": "eslint --ext .js,.jsx --ignore-pattern public,static .",
     "remark-lint": "remark content/posts/",
     "write-good": "write-good $(glob 'content/posts/**/*.md')",
+    "prettier": "prettier '**/*.{js,jsx}' --write",
     "gh-deploy": "npm run clean && npm run build-pl && gh-pages -d public"
   },
   "remarkConfig": {
