Fixes build:gh script.

--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "serve": "gatsby develop",
     "build": "gatsby build",
     "build:pp": "gatsby build --prefix-paths",
-    "build:gh": "npm run clean && npm run build-pl && gh-pages -d public",
+    "build:gh": "npm run clean && npm run build:pp && gh-pages -d public",
     "clean": "rm -rf public",
     "lint:js": "eslint --ext .js,.jsx --ignore-pattern public,static .",
     "lint:md": "remark content/posts/",
