--- a/package.json
+++ b/package.json
@@ -56,7 +56,9 @@
   "license": "MIT",
   "main": "n/a",
   "scripts": {
-    "serve": "gatsby develop",
+    "develop": "gatsby develop",
+    "dev": "npm run develop",
+    "serve": "gatsby serve",
     "build": "gatsby build",
     "build:pp": "gatsby build --prefix-paths",
     "build:gh": "npm run clean && npm run build:pp && gh-pages -d public",
