--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gatsby-transformer-remark": "^1.7.0",
     "lodash": "^4.17.4",
     "lodash-webpack-plugin": "^0.11.4",
+    "moment": "^2.19.2",
     "react": "^15.6.1",
     "react-disqus-comments": "^1.0.3",
     "react-dom": "^15.6.1",
