--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "babel-plugin-lodash": "^3.2.11",
     "gatsby": "^1.8.11",
     "gatsby-link": "^1.6.7",
+    "gatsby-paginate": "^1.0.6",
     "gatsby-plugin-catch-links": "^1.0.4",
     "gatsby-plugin-feed": "^1.3.4",
     "gatsby-plugin-google-analytics": "^1.0.3",
