add eslint-plugin-prettier and only run prettier on non-ignored directories

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,10 +1,19 @@
 {
-  "extends": ["airbnb", "prettier"],
-  "plugins": ["react", "jsx-a11y", "import"],
+  "extends": [
+    "airbnb",
+    "prettier"
+  ],
+  "plugins": [
+    "react",
+    "jsx-a11y",
+    "import",
+    "prettier"
+  ],
   "rules": {
     "react/prefer-stateless-function": "off",
     "react/prop-types": "off",
-    "react/no-danger": "off"
+    "react/no-danger": "off",
+    "prettier/prettier": "warn"
   },
   "settings": {
     "import/core-modules": []
