--- a/package.json
+++ b/package.json
@@ -1,57 +1,58 @@
 {
   "name": "gatsby-starter-advanced",
-  "description":
-    "GatsbyJS starter that includes examples for advanced use cases.",
+  "description": "GatsbyJS starter that includes examples for advanced use cases.",
   "version": "1.1.0",
   "author": "Ruben Harutyunyan <vagr9k@gmail.com>",
   "dependencies": {
     "babel-plugin-lodash": "^3.3.2",
-    "gatsby": "^1.9.149",
-    "gatsby-link": "^1.6.32",
-    "gatsby-plugin-catch-links": "^1.0.14",
-    "gatsby-plugin-feed": "^1.3.15",
-    "gatsby-plugin-google-analytics": "^1.0.14",
-    "gatsby-plugin-manifest": "^1.0.12",
-    "gatsby-plugin-nprogress": "^1.0.9",
-    "gatsby-plugin-offline": "^1.0.12",
-    "gatsby-plugin-react-helmet": "^2.0.3",
-    "gatsby-plugin-sharp": "^1.6.24",
-    "gatsby-plugin-sitemap": "^1.2.9",
-    "gatsby-plugin-twitter": "^1.0.14",
+    "gatsby": "^1.9.178",
+    "gatsby-link": "^1.6.36",
+    "gatsby-plugin-catch-links": "^1.0.15",
+    "gatsby-plugin-feed": "^1.3.16",
+    "gatsby-plugin-google-analytics": "^1.0.17",
+    "gatsby-plugin-manifest": "^1.0.13",
+    "gatsby-plugin-nprogress": "^1.0.11",
+    "gatsby-plugin-offline": "^1.0.13",
+    "gatsby-plugin-react-helmet": "^2.0.4",
+    "gatsby-plugin-sharp": "^1.6.27",
+    "gatsby-plugin-sitemap": "^1.2.11",
+    "gatsby-plugin-twitter": "^1.0.16",
     "gatsby-remark-autolink-headers": "^1.4.11",
     "gatsby-remark-copy-linked-files": "^1.5.25",
-    "gatsby-remark-images": "^1.5.36",
-    "gatsby-remark-prismjs": "^1.2.11",
+    "gatsby-remark-images": "^1.5.41",
+    "gatsby-remark-prismjs": "^1.2.12",
     "gatsby-remark-responsive-iframe": "^1.4.16",
-    "gatsby-source-filesystem": "^1.5.11",
-    "gatsby-transformer-remark": "^1.7.26",
+    "gatsby-source-filesystem": "^1.5.16",
+    "gatsby-transformer-remark": "^1.7.30",
     "lodash": "^4.17.4",
     "lodash-webpack-plugin": "^0.11.4",
-    "react": "^15.6.1",
+    "react": "^16.2.0",
     "react-disqus-comments": "^1.1.1",
-    "react-dom": "^15.6.1",
+    "react-dom": "^16.2.0",
     "react-helmet": "^5.2.0",
-    "react-share": "^1.19.0",
+    "react-share": "^2.0.0",
     "react-twitter-widgets": "^1.7.1"
   },
   "devDependencies": {
     "cli-glob": "^0.1.0",
-    "eslint": "^3.19.0",
-    "eslint-config-airbnb": "^15.0.2",
+    "eslint": "^4.17.0",
+    "eslint-config-airbnb": "^16.1.0",
     "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-jsx-a11y": "^5.1.1",
-    "eslint-plugin-react": "^7.5.1",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.6.1",
     "gh-pages": "^1.1.0",
-    "prettier": "^1.9.2",
-    "remark-cli": "^4.0.0",
+    "prettier": "^1.10.2",
+    "remark-cli": "^5.0.0",
     "remark-preset-lint-recommended": "^3.0.1",
     "stylefmt": "^6.0.0",
     "stylelint": "^8.4.0",
     "stylelint-config-standard": "^18.0.0",
     "write-good": "^0.11.3"
   },
-  "keywords": ["gatsby"],
+  "keywords": [
+    "gatsby"
+  ],
   "license": "MIT",
   "main": "n/a",
   "scripts": {
@@ -68,6 +69,8 @@
     "format:js": "prettier '**/*.{js,jsx}' --write"
   },
   "remarkConfig": {
-    "plugins": ["remark-preset-lint-recommended"]
+    "plugins": [
+      "remark-preset-lint-recommended"
+    ]
   }
 }
