--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gatsby-transformer-remark": "^1.7.30",
     "lodash": "^4.17.4",
     "lodash-webpack-plugin": "^0.11.4",
+    "moment": "^2.22.2",
     "react": "^16.2.0",
     "react-disqus-comments": "^1.1.1",
     "react-dom": "^16.2.0",
