--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "babel-plugin-lodash": "^3.3.2",
     "gatsby": "^1.9.178",
+    "gatsby-image": "^1.0.54",
     "gatsby-link": "^1.6.36",
     "gatsby-plugin-catch-links": "^1.0.15",
     "gatsby-plugin-feed": "^1.3.16",
@@ -14,7 +15,7 @@
     "gatsby-plugin-nprogress": "^1.0.11",
     "gatsby-plugin-offline": "^1.0.13",
     "gatsby-plugin-react-helmet": "^2.0.4",
-    "gatsby-plugin-sharp": "^1.6.27",
+    "gatsby-plugin-sharp": "^1.6.48",
     "gatsby-plugin-sitemap": "^1.2.11",
     "gatsby-plugin-twitter": "^1.0.16",
     "gatsby-remark-autolink-headers": "^1.4.11",
@@ -24,6 +25,7 @@
     "gatsby-remark-responsive-iframe": "^1.4.16",
     "gatsby-source-filesystem": "^1.5.16",
     "gatsby-transformer-remark": "^1.7.30",
+    "gatsby-transformer-sharp": "^1.6.27",
     "lodash": "^4.17.4",
     "lodash-webpack-plugin": "^0.11.4",
     "moment": "^2.22.2",
