--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "version": "1.1.0",
   "author": "Ruben Harutyunyan <vagr9k@gmail.com>",
   "dependencies": {
-    "babel-plugin-lodash": "^3.3.2",
     "gatsby": "next",
     "gatsby-image": "next",
     "gatsby-link": "next",
@@ -19,6 +18,7 @@
     "gatsby-plugin-sharp": "next",
     "gatsby-plugin-sitemap": "next",
     "gatsby-plugin-twitter": "next",
+    "gatsby-plugin-lodash": "next",
     "gatsby-remark-autolink-headers": "next",
     "gatsby-remark-copy-linked-files": "next",
     "gatsby-remark-images": "next",
@@ -28,7 +28,6 @@
     "gatsby-transformer-remark": "next",
     "gatsby-transformer-sharp": "next",
     "lodash": "^4.17.4",
-    "lodash-webpack-plugin": "^0.11.4",
     "moment": "^2.22.2",
     "react": "^16.2.0",
     "react-disqus-comments": "^1.1.1",
