Fix run develop error on fresh install

--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "version": "1.1.0",
   "author": "Ruben Harutyunyan <vagr9k@gmail.com>",
   "dependencies": {
+    "@babel/runtime": "^7.0.0-beta.54",
     "gatsby": "next",
     "gatsby-image": "next",
+    "gatsby-link": "^1.6.46",
     "gatsby-plugin-catch-links": "next",
     "gatsby-plugin-feed": "next",
     "gatsby-plugin-google-analytics": "next",
@@ -17,6 +19,7 @@
     "gatsby-plugin-sharp": "next",
     "gatsby-plugin-sitemap": "next",
     "gatsby-plugin-twitter": "next",
+    "gatsby-react-router-scroll": "^1.0.18",
     "gatsby-remark-autolink-headers": "next",
     "gatsby-remark-copy-linked-files": "next",
     "gatsby-remark-images": "next",
@@ -29,8 +32,8 @@
     "moment": "^2.22.2",
     "prismjs": "^1.15.0",
     "react": "^16.4.1",
-    "react-dom": "^16.4.1",
     "react-disqus-comments": "^1.1.1",
+    "react-dom": "^16.4.1",
     "react-helmet": "^5.2.0",
     "react-share": "^2.0.0",
     "react-twitter-widgets": "^1.7.1",
