--- a/package.json
+++ b/package.json
@@ -4,27 +4,27 @@
   "version": "1.1.0",
   "author": "Ruben Harutyunyan <vagr9k@gmail.com>",
   "dependencies": {
-    "gatsby": "next",
-    "gatsby-image": "next",
-    "gatsby-plugin-catch-links": "next",
-    "gatsby-plugin-feed": "next",
-    "gatsby-plugin-google-analytics": "next",
-    "gatsby-plugin-lodash": "next",
-    "gatsby-plugin-manifest": "next",
-    "gatsby-plugin-nprogress": "next",
-    "gatsby-plugin-offline": "next",
-    "gatsby-plugin-react-helmet": "next",
-    "gatsby-plugin-sharp": "next",
-    "gatsby-plugin-sitemap": "next",
-    "gatsby-plugin-twitter": "next",
-    "gatsby-remark-autolink-headers": "next",
-    "gatsby-remark-copy-linked-files": "next",
-    "gatsby-remark-images": "next",
-    "gatsby-remark-prismjs": "next",
-    "gatsby-remark-responsive-iframe": "next",
-    "gatsby-source-filesystem": "next",
-    "gatsby-transformer-remark": "next",
-    "gatsby-transformer-sharp": "next",
+    "gatsby": "2.0.0",
+    "gatsby-image": "2.0.0",
+    "gatsby-plugin-catch-links": "2.0.2",
+    "gatsby-plugin-feed": "2.0.5",
+    "gatsby-plugin-google-analytics": "2.0.5",
+    "gatsby-plugin-lodash": "3.0.1",
+    "gatsby-plugin-manifest": "2.0.2",
+    "gatsby-plugin-nprogress": "2.0.5",
+    "gatsby-plugin-offline": "2.0.5",
+    "gatsby-plugin-react-helmet": "3.0.0",
+    "gatsby-plugin-sharp": "2.0.5",
+    "gatsby-plugin-sitemap": "2.0.1",
+    "gatsby-plugin-twitter": "2.0.5",
+    "gatsby-remark-autolink-headers": "2.0.5",
+    "gatsby-remark-copy-linked-files": "2.0.5",
+    "gatsby-remark-images": "2.0.1",
+    "gatsby-remark-prismjs": "2.0.5",
+    "gatsby-remark-responsive-iframe": "2.0.5",
+    "gatsby-source-filesystem": "2.0.1",
+    "gatsby-transformer-remark": "2.1.1",
+    "gatsby-transformer-sharp": "2.1.1",
     "lodash": "^4.17.4",
     "moment": "^2.22.2",
     "prismjs": "^1.15.0",
