--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,5 +1,5 @@
 {
-    "extends": "stylelint-config-standard",
+    "extends": ["stylelint-config-standard",  "stylelint-config-prettier"],
     "rules": {
         "indentation": 4
     }
