--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "remark-preset-lint-recommended": "^3.0.2",
     "stylefmt": "^6.0.3",
     "stylelint": "^11.0.0",
+    "stylelint-config-prettier": "^6.0.0",
     "stylelint-config-standard": "^19.0.0",
     "write-good": "^1.0.1"
   },
