Add support for NetlifyCMS.

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gatsby-plugin-google-analytics": "^2.1.19",
     "gatsby-plugin-lodash": "^3.1.10",
     "gatsby-plugin-manifest": "^2.2.20",
+    "gatsby-plugin-netlify-cms": "^4.1.22",
     "gatsby-plugin-nprogress": "^2.1.9",
     "gatsby-plugin-offline": "^3.0.11",
     "gatsby-plugin-react-helmet": "^3.1.10",
@@ -27,6 +28,7 @@
     "gatsby-transformer-sharp": "^2.2.19",
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
+    "netlify-cms-app": "^2.9.7",
     "prismjs": "^1.16.0",
     "react": "^16.10.1",
     "react-disqus-comments": "^1.4.0",
