--- a/netlify.toml
+++ b/netlify.toml
@@ -2,4 +2,5 @@
   publish = "public"
   command = "yarn run build"
 [build.environment]
-  YARN_VERSION = "1.7.0"
+  YARN_VERSION = "1.19.1"
+  YARN_FLAGS = "--no-ignore-optional"
