Rely directly on Gatsby instead of yarn during Netlify builds.

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,7 @@
 [build]
   publish = "public"
-  command = "yarn run build"
+  command = "npm run build"
 [build.environment]
+  NODE_VERSION = "12.13.0"
   YARN_VERSION = "1.19.1"
   YARN_FLAGS = "--no-ignore-optional"
