Actually rely directly on Gatsby instead of yarn during Netlify builds.

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   publish = "public"
-  command = "npm run build"
+  command = "gatsby build"
 [build.environment]
   NODE_VERSION = "12.13.0"
   YARN_VERSION = "1.19.1"
