working on cover image processing

--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "gatsby-plugin-google-analytics": "^2.1.35",
     "gatsby-plugin-lodash": "^3.1.20",
     "gatsby-plugin-manifest": "^2.2.41",
-    "gatsby-plugin-netlify-cms": "^4.1.38",
     "gatsby-plugin-nprogress": "^2.1.19",
     "gatsby-plugin-offline": "^3.0.34",
     "gatsby-plugin-react-helmet": "^3.1.22",
@@ -21,6 +20,7 @@
     "gatsby-plugin-styled-components": "^3.1.19",
     "gatsby-plugin-twitter": "^2.1.19",
     "gatsby-remark-autolink-headers": "^2.1.24",
+    "gatsby-remark-check-links": "^2.1.0",
     "gatsby-remark-copy-linked-files": "^2.1.37",
     "gatsby-remark-images": "^3.1.44",
     "gatsby-remark-prismjs": "^3.3.31",
@@ -31,7 +31,6 @@
     "gatsby-transformer-sharp": "^2.3.14",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
-    "netlify-cms-app": "^2.11.13",
     "prismjs": "^1.19.0",
     "react": "^16.10.1",
     "react-disqus-comments": "^1.4.0",
@@ -76,6 +75,7 @@
   "license": "MIT",
   "main": "n/a",
   "scripts": {
+    "prestart": "gatsby clean",
     "develop": "gatsby develop",
     "dev": "npm run develop",
     "serve": "gatsby serve",
