--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -14,8 +14,10 @@ collections:
     slug: "{{year}}-{{month}}-{{day}}-{{slug}}.md"
     fields:
       - { label: "Title", name: "title", widget: "string" }
-      - { label: "Publish Date", name: "date", widget: "datetime" }
+      - { label: "Publication Date", name: "datePublished", widget: "datetime" }
+      - { label: "Modification Date", name: "dateModified", widget: "datetime" }
       - { label: "Cover Image", name: "cover", widget: "image" }
+      - { label: "Cover Image Alt", name: "coverAlt", widget: "string" }
       - { label: "Slug", name: "slug", widget: "string" }
       - { label: "Category", name: "category", widget: "string" }
       - { label: "Tags", name: "tags", widget: "list" }
