--- a/package.json
+++ b/package.json
@@ -4,57 +4,69 @@
   "version": "2.20.11",
   "author": "Ruben Harutyunyan <vagr9k@gmail.com>",
   "dependencies": {
-    "gatsby": "^3.8.1",
-    "gatsby-plugin-disqus": "^1.2.2",
-    "gatsby-plugin-feed": "^3.8.0",
-    "gatsby-plugin-google-analytics": "^3.8.0",
-    "gatsby-plugin-image": "^1.8.0",
-    "gatsby-plugin-lodash": "^4.8.0",
-    "gatsby-plugin-manifest": "^3.8.0",
-    "gatsby-plugin-netlify-cms": "^5.8.0",
-    "gatsby-plugin-nprogress": "^3.8.0",
-    "gatsby-plugin-offline": "^4.8.0",
-    "gatsby-plugin-react-helmet": "^4.8.0",
-    "gatsby-plugin-sharp": "^3.8.0",
-    "gatsby-plugin-sitemap": "^4.4.0",
-    "gatsby-plugin-twitter": "^3.8.0",
-    "gatsby-remark-autolink-headers": "^4.5.0",
-    "gatsby-remark-copy-linked-files": "^4.5.0",
-    "gatsby-remark-images": "^5.5.0",
-    "gatsby-remark-prismjs": "^5.5.0",
+    "@reach/router": "^1.3.4",
+    "gatsby": "^3.0.1",
+    "gatsby-image": "^3.0.0",
+    "gatsby-plugin-catch-links": "^3.0.0",
+    "gatsby-plugin-feed": "^3.0.0",
+    "gatsby-plugin-google-analytics": "^3.0.0",
+    "gatsby-plugin-lodash": "^4.0.0",
+    "gatsby-plugin-manifest": "^3.0.0",
+    "gatsby-plugin-netlify-cms": "^5.0.0",
+    "gatsby-plugin-nprogress": "^3.0.0",
+    "gatsby-plugin-offline": "^4.0.0",
+    "gatsby-plugin-react-helmet": "^4.0.0",
+    "gatsby-plugin-sharp": "^3.0.0",
+    "gatsby-plugin-sitemap": "^3.0.0",
+    "gatsby-plugin-twitter": "^3.0.0",
+    "gatsby-remark-autolink-headers": "^3.0.0",
+    "gatsby-remark-copy-linked-files": "^3.0.0",
+    "gatsby-remark-images": "^4.0.0",
+    "gatsby-remark-prismjs": "^4.0.0",
     "gatsby-remark-relative-images": "^2.0.2",
-    "gatsby-remark-responsive-iframe": "^4.5.0",
-    "gatsby-source-filesystem": "^3.8.0",
-    "gatsby-transformer-remark": "^4.5.0",
-    "gatsby-transformer-sharp": "^3.8.0",
+    "gatsby-remark-responsive-iframe": "^3.0.0",
+    "gatsby-source-filesystem": "^3.0.0",
+    "gatsby-transformer-remark": "^3.0.0",
+    "gatsby-transformer-sharp": "^3.0.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
-    "netlify-cms-app": "^2.15.20",
-    "prismjs": "^1.24.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "netlify-cms-app": "^2.14.26",
+    "prismjs": "^1.23.0",
+    "react": "^17.0.1",
+    "react-disqus-comments": "^1.4.0",
+    "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-share": "^4.4.0",
-    "react-twitter-widgets": "^1.10.0",
+    "react-twitter-widgets": "^1.9.5",
     "url-join": "^4.0.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/react": "^11.2.3",
+    "@types/jest": "^26.0.19",
+    "babel-jest": "^26.6.3",
+    "babel-preset-gatsby": "^1.0.0",
     "cli-glob": "^0.1.0",
-    "eslint": "^7.30.0",
+    "eslint": "^7.21.0",
     "eslint-config-airbnb": "^18.2.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.23.4",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jest": "^24.1.3",
+    "eslint-plugin-jest-dom": "^3.6.5",
     "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-prettier": "^3.4.0",
-    "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "gh-pages": "^3.2.3",
-    "prettier": "^2.3.2",
+    "eslint-plugin-testing-library": "^3.10.1",
+    "gh-pages": "^3.1.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^26.6.3",
+    "prettier": "^2.1.2",
     "remark-cli": "^9.0.0",
     "remark-preset-lint-recommended": "^5.0.0",
-    "stylelint": "^13.13.1",
+    "stylelint": "^13.11.0",
     "stylelint-config-prettier": "^8.0.2",
-    "stylelint-config-standard": "^22.0.0",
+    "stylelint-config-standard": "^20.0.0",
     "stylelint-prettier": "^1.2.0",
     "write-good": "^1.0.8"
   },
@@ -76,7 +88,8 @@
     "lint:md": "remark content/",
     "write-good": "write-good $(glob 'content/posts/**/*.md')",
     "format:js": "prettier '**/*.{js,jsx}' --write",
-    "format:styles": "prettier '**/*.{css,scss}' --write"
+    "format:styles": "prettier '**/*.{css,scss}' --write",
+    "test": "jest"
   },
   "remarkConfig": {
     "plugins": [
