--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-helmet": "^6.1.0",
     "react-share": "^4.4.0",
     "react-twitter-widgets": "^1.9.5",
+    "remove-markdown": "^0.3.0",
     "url-join": "^4.0.0"
   },
   "devDependencies": {
