--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "version": "2.20.11",
   "author": "Ruben Harutyunyan <vagr9k@gmail.com>",
   "dependencies": {
+    "@fec/remark-a11y-emoji": "^3.0.0",
+    "@mdx-js/mdx": "^1.6.22",
+    "@mdx-js/react": "^1.6.22",
     "@reach/router": "^1.3.4",
     "gatsby": "^3.0.1",
     "gatsby-image": "^3.0.0",
@@ -12,9 +15,11 @@
     "gatsby-plugin-google-analytics": "^3.0.0",
     "gatsby-plugin-lodash": "^4.0.0",
     "gatsby-plugin-manifest": "^3.0.0",
+    "gatsby-plugin-mdx": "^2.0.0",
     "gatsby-plugin-netlify-cms": "^5.0.0",
     "gatsby-plugin-nprogress": "^3.0.0",
     "gatsby-plugin-offline": "^4.0.0",
+    "gatsby-plugin-page-creator": "^3.0.0",
     "gatsby-plugin-react-helmet": "^4.0.0",
     "gatsby-plugin-sharp": "^3.0.0",
     "gatsby-plugin-sitemap": "^3.0.0",
@@ -33,11 +38,14 @@
     "netlify-cms-app": "^2.14.26",
     "prismjs": "^1.23.0",
     "react": "^17.0.1",
+    "react-color": "^2.19.3",
     "react-disqus-comments": "^1.4.0",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-share": "^4.4.0",
     "react-twitter-widgets": "^1.9.5",
+    "remark-codesandbox": "^0.10.0",
+    "remark-external-links": "^8.0.0",
     "remove-markdown": "^0.3.0",
     "url-join": "^4.0.0"
   },
