--- a/package.json
+++ b/package.json
@@ -5,17 +5,17 @@
   "author": "Ruben Harutyunyan <vagr9k@gmail.com>",
   "dependencies": {
     "gatsby": "^3.0.1",
-    "gatsby-image": "^3.0.0",
     "gatsby-plugin-catch-links": "^3.0.0",
     "gatsby-plugin-feed": "^3.0.0",
     "gatsby-plugin-google-analytics": "^3.0.0",
+    "gatsby-plugin-image": "^1.1.0",
     "gatsby-plugin-lodash": "^4.0.0",
     "gatsby-plugin-manifest": "^3.0.0",
     "gatsby-plugin-netlify-cms": "^5.0.0",
     "gatsby-plugin-nprogress": "^3.0.0",
     "gatsby-plugin-offline": "^4.0.0",
     "gatsby-plugin-react-helmet": "^4.0.0",
-    "gatsby-plugin-sharp": "^3.0.0",
+    "gatsby-plugin-sharp": "^3.1.0",
     "gatsby-plugin-sitemap": "^3.0.0",
     "gatsby-plugin-twitter": "^3.0.0",
     "gatsby-remark-autolink-headers": "^3.0.0",
@@ -26,7 +26,7 @@
     "gatsby-remark-responsive-iframe": "^3.0.0",
     "gatsby-source-filesystem": "^3.0.0",
     "gatsby-transformer-remark": "^3.0.0",
-    "gatsby-transformer-sharp": "^3.0.0",
+    "gatsby-transformer-sharp": "^3.1.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "netlify-cms-app": "^2.14.26",
