--- a/package.json
+++ b/package.json
@@ -115,7 +115,7 @@
     "build": "npm run build:types && npm run build:js && gatsby build",
     "build:gh": "npm run clean && npm run build && gh-pages -d public",
     "clean": "rm -rf public && rm -rf .cache",
-    "lint:js": "eslint --ext .js,.jsx .",
+    "lint:js": "eslint --ext .ts,.tsx,.js,.jsx .",
     "lint:styles": "stylelint src/**/*.css",
     "lint:md": "remark content/",
     "write-good": "write-good $(glob 'content/posts/**/*.md')",
