--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gatsby": "^3.2.1",
     "gatsby-image": "^3.2.0",
     "gatsby-plugin-catch-links": "^3.2.0",
+    "gatsby-plugin-disqus": "^1.2.2",
     "gatsby-plugin-feed": "^3.2.0",
     "gatsby-plugin-google-gtag": "^3.2.0",
     "gatsby-plugin-lodash": "^4.2.0",
@@ -43,7 +44,6 @@
     "prismjs": "^1.23.0",
     "react": "^17.0.2",
     "react-color": "^2.19.3",
-    "react-disqus-comments": "^1.4.0",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-share": "^4.4.0",
