--- a/package.json
+++ b/package.json
@@ -117,14 +117,17 @@
     "lint:js": "eslint --ext .ts,.tsx,.js,.jsx .",
     "lint:styles": "stylelint src/**/*.css",
     "lint:md": "remark content/",
-    "write-good": "write-good $(glob 'content/posts/**/*.md')",
-    "format:js": "prettier '**/*.{js,jsx}' --write",
-    "format:styles": "prettier '**/*.{css,scss}' --write",
+    "lint:format": "prettier --check '**/*.{js,jsx,ts,tsx,css}'",
+    "lint:all": "npm run lint:js && npm run lint:styles && npm run lint:format",
+    "format:js": "prettier '**/*.{js,jsx,ts,tsx}' --write",
+    "format:styles": "prettier '**/*.css' --write",
+    "format:all": "npm run format:js && npm run format:styles",
     "test": "jest",
     "type-check": "tsc --noEmit",
     "type-check:watch": "npm run type-check -- --watch",
     "build:types": "tsc --emitDeclarationOnly",
-    "build:js": "babel src --out-dir lib --extensions \".ts,.tsx\" --source-maps inline"
+    "build:js": "babel src --out-dir lib --extensions \".ts,.tsx\" --source-maps inline",
+    "write-good": "write-good $(glob 'content/**/*.md')"
   },
   "remarkConfig": {
     "plugins": [
