Setup Stylelint for CSS-in-JS.

--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "prettier": "^2.2.1",
     "stylelint": "^13.12.0",
     "stylelint-config-prettier": "^8.0.2",
+    "stylelint-config-recommended": "^4.0.0",
     "stylelint-config-standard": "^21.0.0",
     "stylelint-prettier": "^1.2.0",
     "ts-jest": "^26.5.4",
@@ -115,7 +116,7 @@
     "build:gh": "npm run clean && npm run build && gh-pages -d public",
     "clean": "rm -rf public && rm -rf .cache",
     "lint:js": "eslint --ext .ts,.tsx,.js,.jsx .",
-    "lint:styles": "stylelint src/**/*.css",
+    "lint:styles": "stylelint src/**/*.{js,jsx,ts,tsx,css}",
     "lint:md": "markdownlint-cli2 content/**/*.{md,mdx}",
     "lint:format": "prettier --check '**/*.{js,jsx,ts,tsx,css}'",
     "lint:all": "npm run lint:js && npm run lint:styles && npm run lint:format && npm run lint:md",
