--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@fec/remark-a11y-emoji": "^3.1.0",
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
+    "babel-plugin-styled-components": "^1.12.0",
     "eslint-plugin-graphql": "^4.0.0",
     "gatsby": "^3.2.1",
     "gatsby-image": "^3.2.0",
@@ -24,6 +25,7 @@
     "gatsby-plugin-react-helmet": "^4.2.0",
     "gatsby-plugin-sharp": "^3.2.1",
     "gatsby-plugin-sitemap": "^3.2.0",
+    "gatsby-plugin-styled-components": "^4.5.0",
     "gatsby-plugin-ts-config": "^1.1.5",
     "gatsby-plugin-twitter": "^3.2.0",
     "gatsby-plugin-typegen": "^2.2.4",
@@ -51,6 +53,7 @@
     "remark-codesandbox": "^0.10.0",
     "remark-external-links": "^8.0.0",
     "remove-markdown": "^0.3.0",
+    "styled-components": "^5.3.0",
     "url-join": "^4.0.1"
   },
   "devDependencies": {
@@ -91,6 +94,7 @@
     "husky": "^6.0.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.3",
+    "jest-styled-components": "^7.0.4",
     "markdownlint-cli2": "^0.1.2",
     "prettier": "^2.2.1",
     "stylelint": "^13.12.0",
