--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "@types/react-dom": "^17.0.5",
     "@types/react-helmet": "^6.1.1",
     "@types/remove-markdown": "^0.3.0",
+    "@types/styled-components": "^5.1.9",
     "@types/url-join": "^4.0.0",
     "@typescript-eslint/eslint-plugin": "^4.24.0",
     "babel-jest": "^26.6.3",
