--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "@fec/remark-a11y-emoji": "^3.1.0",
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
+    "@styled-icons/boxicons-logos": "^10.23.0",
+    "@styled-icons/boxicons-regular": "^10.23.0",
+    "@styled-icons/styled-icon": "^10.6.3",
     "babel-plugin-styled-components": "^1.12.0",
     "eslint-plugin-graphql": "^4.0.0",
     "gatsby": "^3.5.1",
@@ -23,6 +26,7 @@
     "gatsby-plugin-offline": "^4.5.1",
     "gatsby-plugin-page-creator": "^3.5.0",
     "gatsby-plugin-react-helmet": "^4.5.0",
+    "gatsby-plugin-react-svg": "^3.0.1",
     "gatsby-plugin-sharp": "^3.5.0",
     "gatsby-plugin-sitemap": "^4.1.0",
     "gatsby-plugin-styled-components": "^4.5.0",
@@ -59,7 +63,6 @@
   "devDependencies": {
     "@babel/cli": "^7.14.3",
     "@babel/core": "^7.14.3",
-    "@babel/plugin-proposal-class-properties": "^7.13.0",
     "@babel/preset-env": "^7.14.2",
     "@babel/preset-react": "^7.13.13",
     "@babel/preset-typescript": "^7.13.0",
