--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@styled-icons/boxicons-regular": "^10.23.0",
     "@styled-icons/styled-icon": "^10.6.3",
     "babel-plugin-styled-components": "^1.12.0",
+    "date-fns": "^2.22.1",
     "eslint-plugin-graphql": "^4.0.0",
     "gatsby": "^3.5.1",
     "gatsby-image": "^3.5.0",
@@ -47,6 +48,7 @@
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "netlify-cms-app": "^2.15.9",
+    "normalize.css": "^8.0.1",
     "prismjs": "^1.23.0",
     "react": "^17.0.2",
     "react-color": "^2.19.3",
