--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@styled-icons/boxicons-logos": "^10.34.0",
     "@styled-icons/boxicons-regular": "^10.34.0",
     "@styled-icons/styled-icon": "^10.6.3",
+    "@types/mdx-js__react": "^1.5.3",
     "babel-plugin-styled-components": "^1.12.0",
     "date-fns": "^2.22.1",
     "eslint-plugin-graphql": "^4.0.0",
@@ -48,7 +49,6 @@
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "netlify-cms-app": "^2.15.17",
-    "normalize.css": "^8.0.1",
     "prismjs": "^1.23.0",
     "react": "^17.0.2",
     "react-color": "^2.19.3",
@@ -60,6 +60,7 @@
     "remark-external-links": "^8.0.0",
     "remove-markdown": "^0.3.0",
     "styled-components": "^5.3.0",
+    "styled-normalize": "^8.0.7",
     "url-join": "^4.0.1"
   },
   "devDependencies": {
