Remove redundant exports and add ts-prune linting.

--- a/package.json
+++ b/package.json
@@ -110,6 +110,7 @@
     "stylelint-prettier": "^1.2.0",
     "ts-jest": "^27.0.2",
     "ts-node": "^10.0.0",
+    "ts-prune": "^0.9.1",
     "typescript": "^4.3.2",
     "write-good": "^1.0.8"
   },
@@ -126,10 +127,11 @@
     "build:gh": "npm run clean && npm run build && gh-pages -d public",
     "clean": "rm -rf public && rm -rf .cache",
     "lint:js": "eslint --ext .ts,.tsx,.js,.jsx .",
+    "lint:deadcode": "ts-prune -i '(test|gatsby)'",
     "lint:styles": "stylelint src/**/*.{js,jsx,ts,tsx,css}",
     "lint:md": "markdownlint-cli2 content/**/*.{md,mdx}",
     "lint:format": "prettier --check '**/*.{js,jsx,ts,tsx,css}'",
-    "lint:all": "npm run lint:js && npm run lint:styles && npm run lint:format && npm run lint:md",
+    "lint:all": "npm run lint:js && npm run lint:deadcode && npm run lint:styles && npm run lint:format && npm run lint:md",
     "format:js": "prettier '**/*.{js,jsx,ts,tsx}' --write",
     "format:styles": "prettier '**/*.css' --write",
     "format:all": "npm run format:js && npm run format:styles",
