--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,4 @@
 {
-  "presets": ["@babel/preset-env", "@babel/preset-typescript", "@babel/react"]
+  "presets": ["@babel/preset-env", "@babel/preset-typescript", "@babel/react"],
+  "plugins": ["@babel/plugin-transform-runtime"]
 }
