--- a/package.json
+++ b/package.json
@@ -67,11 +67,13 @@
   "devDependencies": {
     "@babel/cli": "^7.14.3",
     "@babel/core": "^7.14.3",
+    "@babel/plugin-transform-runtime": "^7.14.5",
     "@babel/preset-env": "^7.14.4",
     "@babel/preset-react": "^7.13.13",
     "@babel/preset-typescript": "^7.13.0",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
+    "@types/babel__plugin-transform-runtime": "^7",
     "@types/clone-deep": "^4.0.1",
     "@types/jest": "^26.0.23",
     "@types/node": "^15.9.0",
