--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-color": "^2.19.3",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
+    "react-query": "^3.18.1",
     "react-share": "^4.4.0",
     "react-twitter-widgets": "^1.10.0",
     "remark-codesandbox": "^0.10.0",
