--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
   ],
   "compilerOptions": {
     "jsx": "react",
-    "lib": ["dom", "es2015", "es2017"],
+    "lib": ["dom", "es2015", "es2017", "es2019"],
     "allowJs": true,
     "incremental": true,
     "target": "esnext",
