--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gatsby-plugin-disqus": "^1.2.2",
     "gatsby-plugin-feed": "^3.6.0",
     "gatsby-plugin-google-gtag": "^3.6.0",
+    "gatsby-plugin-image": "^1.8.0",
     "gatsby-plugin-lodash": "^4.6.0",
     "gatsby-plugin-manifest": "^3.6.0",
     "gatsby-plugin-mdx": "^2.6.0",
@@ -29,7 +30,7 @@
     "gatsby-plugin-page-creator": "^3.6.0",
     "gatsby-plugin-react-helmet": "^4.6.0",
     "gatsby-plugin-react-svg": "^3.0.1",
-    "gatsby-plugin-sharp": "^3.6.0",
+    "gatsby-plugin-sharp": "^3.8.0",
     "gatsby-plugin-sitemap": "^4.2.0",
     "gatsby-plugin-styled-components": "^4.6.0",
     "gatsby-plugin-ts-config": "^1.1.5",
@@ -38,13 +39,13 @@
     "gatsby-plugin-typescript": "^3.6.0",
     "gatsby-remark-autolink-headers": "^4.3.0",
     "gatsby-remark-copy-linked-files": "^4.3.0",
-    "gatsby-remark-images": "^5.3.0",
+    "gatsby-remark-images": "^5.5.0",
     "gatsby-remark-prismjs": "^5.3.0",
     "gatsby-remark-relative-images": "^2.0.2",
     "gatsby-remark-responsive-iframe": "^4.3.0",
-    "gatsby-source-filesystem": "^3.6.0",
+    "gatsby-source-filesystem": "^3.8.0",
     "gatsby-transformer-remark": "^4.3.0",
-    "gatsby-transformer-sharp": "^3.6.0",
+    "gatsby-transformer-sharp": "^3.8.0",
     "is-absolute-url": "^3.0.3",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
@@ -129,6 +130,7 @@
     "dev:network": "gatsby develop -H 0.0.0.0",
     "serve": "gatsby serve",
     "build": "npm run build:types && npm run build:js && gatsby build",
+    "build:skip-typecheck": "npm run build:js && gatsby build",
     "build:gh": "npm run clean && npm run build && gh-pages -d public",
     "clean": "rm -rf public && rm -rf .cache",
     "lint:js": "eslint --ext .ts,.tsx,.js,.jsx .",
