--- a/themes/advanced/tsconfig.json
+++ b/themes/advanced/tsconfig.json
@@ -1,29 +1,5 @@
 {
   "include": ["*", ".eslintrc.js", "gatsby/**/*", "src/**/*", "test/**/*"],
-  "compilerOptions": {
-    "jsx": "react",
-    "lib": ["dom", "es2015", "es2017", "es2019"],
-    "allowJs": true,
-    "incremental": true,
-    "target": "esnext",
-    "module": "commonjs",
-    "checkJs": true,
-    "declaration": true,
-    "outDir": "lib",
-    "strict": true,
-    "noImplicitAny": true,
-    "alwaysStrict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true,
-    "noUncheckedIndexedAccess": true,
-    "resolveJsonModule": true,
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
-    "isolatedModules": true,
-    "skipLibCheck": true,
-    "removeComments": false,
-    "preserveConstEnums": true
-  }
+  "exclude": ["gatsby-config.js"],
+  "extends": "../../tsconfig.json"
 }
