--- a/package.json
+++ b/package.json
@@ -16,7 +16,73 @@
   "license": "MIT",
   "main": "n/a",
   "scripts": {
+    "develop": "gatsby develop",
+    "dev": "npm run develop",
+    "dev:network": "gatsby develop -H 0.0.0.0",
+    "serve": "gatsby serve",
+    "build": "gatsby build",
+    "build:gh": "npm run clean && npm run build && gh-pages -d public",
+    "clean": "rm -rf public && rm -rf .cache",
+    "lint:js": "eslint --ext .ts,.tsx,.js,.jsx .",
+    "lint:deadcode": "ts-prune -i '(test|gatsby)'",
+    "lint:styles": "stylelint src/**/*.{js,jsx,ts,tsx,css}",
+    "lint:md": "markdownlint-cli2 content/**/*.{md,mdx}",
+    "lint:format": "prettier --check '**/*.{js,jsx,ts,tsx,css}'",
+    "lint:all": "npm run lint:js && npm run lint:deadcode && npm run lint:styles && npm run lint:format && npm run lint:md",
+    "format:js": "prettier '**/*.{js,jsx,ts,tsx}' --write",
+    "format:styles": "prettier '**/*.css' --write",
+    "format:all": "npm run format:js && npm run format:styles",
+    "test": "jest",
+    "type-check": "tsc --noEmit",
+    "type-check:watch": "npm run type-check -- --watch",
+    "write-good": "write-good $(glob 'content/**/*.md')",
     "check": "yarn workspaces foreach run lint:all && yarn workspaces foreach run type-check",
     "prepare": "husky install"
+  },
+  "dependencies": {
+    "gatsby-theme-advanced": "workspace:*",
+    "gatsby": "^3.8.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "styled-components": "^5.3.0"
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.0.0",
+    "@types/jest": "^26.0.23",
+    "@types/node": "^16.0.0",
+    "@types/react": "^17.0.13",
+    "@types/react-dom": "^17.0.8",
+    "@types/react-helmet": "^6.1.1",
+    "@types/styled-components": "^5.1.11",
+    "@typescript-eslint/eslint-plugin": "^4.28.1",
+    "babel-jest": "^27.0.6",
+    "eslint": "^7.30.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-airbnb-typescript": "^12.3.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-jest": "^24.3.6",
+    "eslint-plugin-jest-dom": "^3.9.0",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-testing-library": "^4.7.0",
+    "gh-pages": "^3.2.3",
+    "husky": "^7.0.0",
+    "jest": "^27.0.6",
+    "jest-styled-components": "^7.0.4",
+    "markdownlint-cli2": "^0.1.3",
+    "prettier": "^2.3.2",
+    "stylelint": "^13.13.1",
+    "stylelint-config-prettier": "^8.0.2",
+    "stylelint-config-recommended": "^5.0.0",
+    "stylelint-prettier": "^1.2.0",
+    "ts-jest": "^27.0.3",
+    "ts-node": "^10.0.0",
+    "ts-prune": "^0.9.2",
+    "typescript": "^4.3.5",
+    "write-good": "^1.0.8"
   }
 }
