Switch from gatsby-plugin-ts-config to ts-node based gatsby-* file handling.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,11 @@
 {
-  "exclude": ["node_modules", "**/gatsby-config.js"],
+  "exclude": [
+    "node_modules",
+    "**/node_modules",
+    "**/.cache/*",
+    "**/public",
+    "**/cypress"
+  ],
   "include": [
     "./src/",
     ".eslintrc.js",
