--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
+    "@testing-library/cypress": "^7.0.6",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@types/jest": "^26.0.23",
@@ -59,6 +60,7 @@
     "@types/styled-components": "^5.1.11",
     "@typescript-eslint/eslint-plugin": "^4.28.1",
     "babel-jest": "^27.0.6",
+    "cypress-axe": "^0.12.2",
     "eslint": "^7.30.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-airbnb-typescript": "^12.3.1",
