--- a/themes/advanced/package.json
+++ b/themes/advanced/package.json
@@ -30,7 +30,6 @@
     "gatsby-plugin-react-svg": "^3.0.1",
     "gatsby-plugin-sharp": "^3.8.0",
     "gatsby-plugin-sitemap": "^4.4.0",
-    "gatsby-plugin-ts-config": "^1.1.5",
     "gatsby-plugin-twitter": "^3.8.0",
     "gatsby-plugin-typegen": "^2.2.4",
     "gatsby-plugin-typescript": "^3.8.0",
@@ -59,6 +58,8 @@
     "remark-external-links": "^8.0.0",
     "remark-unwrap-images": "^2.1.0",
     "remove-markdown": "^0.3.0",
+    "source-map-support": "^0.5.19",
+    "ts-node": "^10.1.0",
     "url-join": "^4.0.1"
   },
   "devDependencies": {
@@ -78,6 +79,7 @@
     "@types/react-dom": "^17.0.8",
     "@types/react-helmet": "^6.1.1",
     "@types/remove-markdown": "^0.3.0",
+    "@types/source-map-support": "^0",
     "@types/url-join": "^4.0.0",
     "@typescript-eslint/eslint-plugin": "^4.28.1",
     "babel-jest": "^27.0.6",
@@ -110,7 +112,6 @@
     "stylelint-config-recommended": "^5.0.0",
     "stylelint-prettier": "^1.2.0",
     "ts-jest": "^27.0.3",
-    "ts-node": "^10.0.0",
     "ts-prune": "^0.9.2",
     "typescript": "^4.3.5",
     "write-good": "^1.0.8"
