add description and style updates to homepage and post!

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -20,3 +20,4 @@ collections:
       - { label: "Category", name: "category", widget: "string" }
       - { label: "Tags", name: "tags", widget: "list" }
       - { label: "Body", name: "body", widget: "markdown" }
+      - { label: "Description", name: "description", widget: "markdown" }
