Mock gatsby-theme-advanced's exports that invoke graphql calls.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
     ".eslintrc.js",
     "**/gatsby/**/*",
     "**/src/**/*",
+    "**/__mocks__/**/*",
     "**/test/**/*",
     "**/index.ts"
   ],
