--- a/themes/amaranth/package.json
+++ b/themes/amaranth/package.json
@@ -2,7 +2,14 @@
   "name": "gatsby-theme-amaranth",
   "description": "A stylish GatsbyJS theme built on top of gatsby-theme-advanced.",
   "version": "3.0.0",
-  "author": "Ruben Harutyunyan <vagr9k@gmail.com>",
+  "author": "Ruben Harutyunyan <vagr9k@gmail.com> (https://harutyunyan.dev/)",
+  "homepage": "https://github.com/Vagr9K/gatsby-advanced-starter/tree/master/themes/amaranth",
+  "bugs": "https://github.com/Vagr9K/gatsby-advanced-starter/issues",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Vagr9K/gatsby-advanced-starter.git",
+    "directory": "themes/amaranth"
+  },
   "dependencies": {
     "@fec/remark-a11y-emoji": "^3.1.0",
     "@mdx-js/mdx": "^1.6.22",
