--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,6 @@
 [build]
   publish = "public"
-  command = "gatsby build"
+  command = "yarn build"
 [build.environment]
-  NODE_VERSION = "12.13.0"
-  YARN_VERSION = "1.19.1"
-  YARN_FLAGS = "--no-ignore-optional"
+  NODE_VERSION = "16.6.1"
+  YARN_VERSION = "3.0.0"
