Fix failing Coveralls report upload in the CD workflow.

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -89,4 +89,5 @@ jobs:
         uses: coverallsapp/github-action@master
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
-          base-path: ${{ matrix.workdir }}
+          base-path: themes/advanced
+          path-to-lcov: themes/advanced/coverage/lcov.info
