--- a/themes/amaranth/package.json
+++ b/themes/amaranth/package.json
@@ -21,35 +21,34 @@
     "babel-plugin-styled-components": "^1.13.2",
     "date-fns": "^2.23.0",
     "eslint-plugin-graphql": "^4.0.0",
-    "gatsby-image": "^3.11.0",
-    "gatsby-plugin-catch-links": "^3.11.0",
-    "gatsby-plugin-feed": "^3.11.0",
-    "gatsby-plugin-google-gtag": "^3.11.0",
-    "gatsby-plugin-image": "^1.11.0",
-    "gatsby-plugin-lodash": "^4.11.0",
-    "gatsby-plugin-manifest": "^3.11.0",
-    "gatsby-plugin-mdx": "^2.11.0",
-    "gatsby-plugin-netlify-cms": "^5.11.0",
-    "gatsby-plugin-nprogress": "^3.11.0",
-    "gatsby-plugin-offline": "^4.11.0",
-    "gatsby-plugin-page-creator": "^3.11.0",
-    "gatsby-plugin-react-helmet": "^4.11.0",
+    "gatsby-plugin-catch-links": "alpha-9689ff",
+    "gatsby-plugin-feed": "alpha-9689ff",
+    "gatsby-plugin-google-gtag": "alpha-9689ff",
+    "gatsby-plugin-image": "alpha-9689ff",
+    "gatsby-plugin-lodash": "alpha-9689ff",
+    "gatsby-plugin-manifest": "alpha-9689ff",
+    "gatsby-plugin-mdx": "alpha-9689ff",
+    "gatsby-plugin-netlify-cms": "alpha-9689ff",
+    "gatsby-plugin-nprogress": "alpha-9689ff",
+    "gatsby-plugin-offline": "alpha-9689ff",
+    "gatsby-plugin-page-creator": "alpha-9689ff",
+    "gatsby-plugin-react-helmet": "alpha-9689ff",
     "gatsby-plugin-react-svg": "^3.0.1",
-    "gatsby-plugin-sharp": "^3.11.0",
-    "gatsby-plugin-sitemap": "^4.7.0",
-    "gatsby-plugin-styled-components": "^4.11.0",
-    "gatsby-plugin-twitter": "^3.11.0",
-    "gatsby-remark-autolink-headers": "^4.8.0",
-    "gatsby-remark-copy-linked-files": "^4.8.0",
+    "gatsby-plugin-sharp": "alpha-9689ff",
+    "gatsby-plugin-sitemap": "alpha-9689ff",
+    "gatsby-plugin-styled-components": "alpha-9689ff",
+    "gatsby-plugin-twitter": "alpha-9689ff",
+    "gatsby-remark-autolink-headers": "alpha-9689ff",
+    "gatsby-remark-copy-linked-files": "alpha-9689ff",
     "gatsby-remark-embed-video": "^3.1.1",
-    "gatsby-remark-images": "^5.8.0",
-    "gatsby-remark-prismjs": "^5.8.0",
+    "gatsby-remark-images": "alpha-9689ff",
+    "gatsby-remark-prismjs": "alpha-9689ff",
     "gatsby-remark-relative-images": "^2.0.2",
-    "gatsby-remark-responsive-iframe": "^4.8.0",
-    "gatsby-source-filesystem": "^3.11.0",
+    "gatsby-remark-responsive-iframe": "alpha-9689ff",
+    "gatsby-source-filesystem": "alpha-9689ff",
     "gatsby-theme-advanced": "workspace:*",
-    "gatsby-transformer-remark": "^4.8.0",
-    "gatsby-transformer-sharp": "^3.11.0",
+    "gatsby-transformer-remark": "alpha-9689ff",
+    "gatsby-transformer-sharp": "alpha-9689ff",
     "is-absolute-url": "^3.0.3",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
